# randr

./: .gitignore  BLACKSMITH_IMPLEMENTATION.md  CLAUDE.md  Cargo.toml  tiled_types_export.json
.claude/: CLAUDE.md  lessons.md  settings.json  settings.local.json
.claude/agents/: bevy-helper.md  bevy-idiom-reviewer.md  code-change.md  codebase-cleaner.md  codebase-health-scanner.md  codebase-issue-finder.md  coder.md  debug-assistant.md  debugger.md  github-issue-analyzer.md  reviewer.md  rust-codebase-researcher.md  session-orchestrator.md  skill-optimizer.md  test-writer.md
.claude/docs/: INDEX.md  architecture.md  batch-operations.md  delegation.md  sprites.md  workflow-goals.md
.claude/feedback/: TEMPLATE.md  branch-fix-issue-46-unreachable-panics-stats.md  branch-refactor-issue-18-victory-rewards-stats.md  issue-108-stats.md  issue-15-stats.md  issue-22-stats.md  issue-32-stats.md  issue-38-stats.md  issue-43-stats.md  issue-51-stats.md  issue-6-ui-state.md  issue-7-stats.md  issue-91-stats.md  issue-96-stats.md  script-issues.md
.claude/hooks/: auto_check.py  check_branch.py  enforce-scripts.py  enforce_batch_ops.py  enforce_delegation.py  enforce_lsp.py  enforce_removal_check.py  enforce_scripts.py  session_state.py  track_bash.py  track_edits.py  track_lsp.py  track_tests.py
.claude/scripts/: SCRIPTS.index.md  update_docs.py
.claude_bak/scripts/: SCRIPTS.index.md  (+1 more)
entity_macros/: Cargo.toml
src/: camera.rs  entity_test.rs  inventory.rs  lib.rs  main.rs  menu.rs  registry.rs  system.rs  utilities.rs  utils.rs
tools/: aseprite_add_tags.lua
(+1139 files in other folders)
