[workspace]
members = [".", "entity_macros"]

[package]
name = "game"
version = "0.1.0"
edition = "2024"

[lib]
name = "game"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
bevy = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"
entity_macros = { path = "entity_macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
