[workspace]
members = [".", "entity_macros"]

[package]
name = "game"
version = "0.1.0"
edition = "2024"

[lib]
name = "game"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
bevy = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
entity_macros = { path = "entity_macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
strum = { version = "0.26", features = ["derive"] }
bon = "3.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
